@@ -36,7 +36,12 @@ sexp_typekind(SEXP sexp)
     //case STRSXP: return 'S';
 	//FIXME: handle 'O' (as R list ?)
   case CPLXSXP: return 'c';
-  case LGLSXP: return 'b';
+  // It would be more logical (hah) to return 'b' here, but 1) R booleans are
+  // full integer width, and Numpy for example can only handle 8-bit booleans,
+  // not 32-bit, 2) R actually uses this width; NA_LOGICAL is the same as
+  // NA_INTEGER, i.e. INT_MIN, i.e. 0x80000000. So this also lets us preserve
+  // NA's:
+  case LGLSXP: return 'i';
   }
   return 0;
 }
